--- a/.github/workflows/Check.yml
+++ b/.github/workflows/Check.yml
@@ -11,17 +11,18 @@ jobs:
     name: Check
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - name: checkout
+        uses: actions/checkout@v4
 
-    - name: setup python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.12'
+      - name: setup python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
 
-      # - name: install python packages
-      #   run: |
-      #     python -m pip install --upgrade pip
-      #     pip install -r requirements.txt
+          # - name: install python packages
+          #   run: |
+          #     python -m pip install --upgrade pip
+          #     pip install -r requirements.txt
 
       - name: execute py script
         run: python -m packaging
