--- a/.github/workflows/Check.yml
+++ b/.github/workflows/Check.yml
@@ -19,11 +19,11 @@ jobs:
         with:
           python-version: '3.12'
 
-          # - name: install python packages
-          #   run: |
-          #     python -m pip install --upgrade pip
-          #     pip install -r requirements.txt
+      - name: install python packages
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install .
 
       - name: execute py script
-        run: python -m packaging
+        run: packaging
 
