--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ classifiers = [
 requires-python = ">=3.12"
 # Declare any run-time dependencies that should be installed with the package.
 dependencies = [
+    "semver",
 ]
 
 # Update the urls once the hosting is set up.
