--- a/.github/workflows/Check.yml
+++ b/.github/workflows/Check.yml
@@ -25,6 +25,9 @@ jobs:
           python -m pip install .
 
       - name: execute py script
+        uses: oleksiyrudenko/gha-git-credentials@v2-latest
+        with:
+          token: '${{ secrets.GITHUB_TOKEN }}'
         run: |
           echo `pwd`
           python -m packaging
