--- a/.github/workflows/Check.yml
+++ b/.github/workflows/Check.yml
@@ -24,7 +24,7 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install .
 
-      - name git credentials
+      - name: git credentials
         uses: oleksiyrudenko/gha-git-credentials@v2-latest
         with:
           token: '${{ secrets.GITHUB_TOKEN }}'
