Yet another try....

--- a/.github/workflows/Check.yaml
+++ b/.github/workflows/Check.yaml
@@ -37,12 +37,13 @@ jobs:
             echo "Working directory clean"
           else
             echo "Changes detected"
+            ls -lR
             git commit -a -F commit_message.txt
             git push
             # Create release
             version=$(date '+%Y.%m.%d' | sed -e 's/\.0/./g')
             gh release create -F commit_message.txt $version
-            gh workflow run Docker.yaml
+            gh workflow run Release.yaml
           fi
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
