--- a/environments/seamm.yml
+++ b/environments/seamm.yml
@@ -1,60 +1,1 @@
-name: seamm
-channels:
-  - conda-forge
-  - defaults
-dependencies:
-  - pip
-  - python
-
-    # Core packages
-
-
-    # MolSSI plug-ins
-
-    # 3rd-party plug-ins
-
-    # PyPi packages
-  - pip:
-    # Core packages
-    - molsystem==2023.11.19
-    - reference-handler==0.9.1
-    - seamm==2024.1.2
-    - seamm-dashboard==2024.1.1
-    - seamm-datastore==2022.6.28
-    - seamm-exec==2024.1.17
-    - seamm-ff-util==2023.8.27
-    - seamm-installer==2023.11.3
-    - seamm-jobserver==2024.1.17
-    - seamm-util==2023.11.12
-    - seamm-widgets==2022.10.28
-
-    # MolSSI plug-ins
-    - control-parameters-step==2023.11.15
-    - crystal-builder-step==2022.7.31
-    - custom-step==2023.12.12
-    - dftbplus-step==2024.1.18
-    - diffusivity-step==2023.9.4
-    - fhi-aims-step==2024.1.19
-    - forcefield-step==2024.1.10
-    - from-smiles-step==2023.11.10
-    - gaussian-step==2024.1.19
-    - geometry-analysis-step==2023.1.14
-    - lammps-step==2024.1.18
-    - loop-step==2023.11.9
-    - mopac-step==2024.2.10.1
-    - packmol-step==2024.1.16
-    - properties-step==2023.7.31
-    - psi4-step==2024.1.11
-    - qcarchive-step==2023.3.30
-    - quickmin-step==2023.11.15
-    - rdkit-step==2023.2.22
-    - read-structure-step==2023.11.16
-    - set-cell-step==2021.10.14
-    - strain-step==2022.11.7
-    - supercell-step==2023.11.5
-    - table-step==2023.11.10
-    - thermal-conductivity-step==2024.1.5
-    - torchani-step==2023.2.28
-
-    # 3rd-party plug-ins
-    - pyxtal-step==2021.7.29
+Initial empty file as placeholder.
