--- a/.github/workflows/Release.yaml
+++ b/.github/workflows/Release.yaml
@@ -19,6 +19,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Set up GCC
+        run: sudo apt-get install -y gcc
+        
       - name: set up docker buildx
         uses: docker/setup-buildx-action@v3
 
