--- a/.github/workflows/Release.yaml
+++ b/.github/workflows/Release.yaml
@@ -19,6 +19,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      -name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        
       - name: set up docker buildx
         uses: docker/setup-buildx-action@v3
 
