--- a/environments/Dockerfile
+++ b/environments/Dockerfile
@@ -1,5 +1,5 @@
 FROM    molssi/mamba141
 COPY    seamm.yml /root/seamm.yml
-RUN     mamba env update -f /root/seamm.yml
+RUN     mamba env update --name base --file /root/seamm.yml
 WORKDIR /home
 
