--- a/.github/workflows/Slack.yaml
+++ b/.github/workflows/Slack.yaml
@@ -1,14 +1,15 @@
+name: Slack Notification
 on:
     workflow_dispatch:
     push:
-      
-name: Slack Notification
 jobs:
   slackNotification:
     name: Slack Notification
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Post to a Slack channel
         id: slack
         uses: slackapi/slack-github-action@v1.25.0
@@ -16,9 +17,9 @@ jobs:
           # Slack channel id, channel name, or user id to post message.
           # See also: https://api.slack.com/methods/chat.postMessage#channels
           # You can pass in multiple channels to post to by providing a comma-delimited list of channel IDs.
-    channel-id: 'github'
-    # For posting a simple plain text message
-    slack-message: "Release status: ${{ job.status }}\nTest message\nFrom GitHub Actions"
-  env:
-    SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+          channel-id: 'github'
+          # For posting a simple plain text message
+          slack-message: "Release status: ${{ job.status }}\nTest message\nFrom GitHub Actions"
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
 
