Added SEAMM_ENVIRONEMNT = docker to the environment variables for the container.

--- a/environments/Dockerfile
+++ b/environments/Dockerfile
@@ -2,4 +2,5 @@ FROM    molssi/mamba141
 COPY    seamm.yml /root/seamm.yml
 RUN     mamba env update --name base --file /root/seamm.yml
 WORKDIR /home
+ENV     SEAMM_ENVIRONMENT = docker
 
