More internal changes to handle running tasks, like MOPAC or LAMMPS, in a workflow run in a Docker image. 1. Installing Docker in the image.

--- a/environments/Dockerfile
+++ b/environments/Dockerfile
@@ -1,4 +1,5 @@
 FROM    molssi/mamba141
+RUN     apt-get install -qy curl && curl -sSL https://get.docker.com/ | sh
 COPY    seamm.yml /root/seamm.yml
 RUN     mamba env update --name base --file /root/seamm.yml
 WORKDIR /home
