--- a/.github/workflows/Release.yaml
+++ b/.github/workflows/Release.yaml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 5
 
       - name: Get git version
         run: echo "GIT_VERSION=$(git describe --tags)" >> $GITHUB_ENV
