--- a/environments/seamm.yml
+++ b/environments/seamm.yml
@@ -13,15 +13,15 @@ dependencies:
 
     # Core packages
 
-  - molsystem==2024.3.13
-  - reference-handler==0.9.1
-  - seamm==2024.1.2
-  - seamm-dashboard==2024.1.1
-  - seamm-datastore==2024.3.13
-  - seamm-ff-util==2023.8.27
-  - seamm-installer==2024.3.17
-  - seamm-util==2023.11.12
-  - seamm-widgets==2022.10.28
+  - molsystem
+  - reference-handler
+  - seamm
+  - seamm-dashboard
+  - seamm-datastore
+  - seamm-ff-util
+  - seamm-installer
+  - seamm-util
+  - seamm-widgets
 
     # MolSSI plug-ins
 
@@ -30,36 +30,36 @@ dependencies:
     # PyPi packages
   - pip:
     # Core packages
-    - seamm-exec==2024.3.21
-    - seamm-jobserver==2024.3.12
+    - seamm-exec
+    - seamm-jobserver
 
     # MolSSI plug-ins
-    - control-parameters-step==2023.11.15
-    - crystal-builder-step==2022.7.31
-    - custom-step==2023.12.12
-    - dftbplus-step==2024.1.18
-    - diffusivity-step==2023.9.4
-    - fhi-aims-step==2024.1.19
-    - forcefield-step==2024.1.10
-    - from-smiles-step==2023.11.10
-    - gaussian-step==2024.1.19
-    - geometry-analysis-step==2023.1.14
-    - lammps-step==2024.3.22
-    - loop-step==2023.11.9
-    - mopac-step==2024.3.17
-    - packmol-step==2024.3.20.2
-    - properties-step==2023.7.31
-    - psi4-step==2024.3.17
-    - qcarchive-step==2023.3.30
-    - quickmin-step==2023.11.15
-    - rdkit-step==2023.2.22
-    - read-structure-step==2023.11.16
-    - set-cell-step==2021.10.14
-    - strain-step==2022.11.7
-    - supercell-step==2023.11.5
-    - table-step==2023.11.10
-    - thermal-conductivity-step==2024.3.22
-    - torchani-step==2023.2.28
+    - control-parameters-step
+    - crystal-builder-step
+    - custom-step
+    - dftbplus-step
+    - diffusivity-step
+    - fhi-aims-step
+    - forcefield-step
+    - from-smiles-step
+    - gaussian-step
+    - geometry-analysis-step
+    - lammps-step
+    - loop-step
+    - mopac-step
+    - packmol-step
+    - properties-step
+    - psi4-step
+    - qcarchive-step
+    - quickmin-step
+    - rdkit-step
+    - read-structure-step
+    - set-cell-step
+    - strain-step
+    - supercell-step
+    - table-step
+    - thermal-conductivity-step
+    - torchani-step
 
     # 3rd-party plug-ins
-    - pyxtal-step==2021.7.29
+    - pyxtal-step
