--- a/docker/seamm-environment.yaml
+++ b/docker/seamm-environment.yaml
@@ -31,6 +31,9 @@ services:
         source: ~/SEAMM
         target: /root/SEAMM
       - type: bind
+        source: ~/.seamm.d
+        target: /root/.seamm.d
+      - type: bind
         source: /var/run/docker.sock
         target: /var/run/docker.sock
 
