--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ requires-python = ">=3.12"
 # Declare any run-time dependencies that should be installed with the package.
 dependencies = [
     "requests",
-    "semver",
+    "packaging",
 ]
 
 # Update the urls once the hosting is set up.
