--- a/environments/seamm.yml
+++ b/environments/seamm.yml
@@ -10,6 +10,8 @@ dependencies:
   - psutil
     # The Dashboard fails with newer versions, so until fixed.
   - connexion<3.0
+    # qcportal requires apsw, which needs compiling and hence problems.
+  - qcportal
 
     # Core packages
 
