Fixed error in code for environment files, and the files themselves.

--- a/environments/seamm_pinned.yml
+++ b/environments/seamm_pinned.yml
@@ -10,94 +10,8 @@ dependencies:
   - psutil
     # The Dashboard fails with newer versions, so until fixed.
   - connexion<3.0
-
- 
- 
- 
- 
-#
- 
-q
-c
-p
-o
-r
-t
-a
-l
- 
-r
-e
-q
-u
-i
-r
-e
-s
- 
-a
-p
-s
-w
-,
- 
-w
-h
-i
-c
-h
- 
-n
-e
-e
-d
-s
- 
-c
-o
-m
-p
-i
-l
-i
-n
-g
- 
-a
-n
-d
- 
-h
-e
-n
-c
-e
- 
-p
-r
-o
-b
-l
-e
-m
-s
-.
-
-
- 
- 
--
- 
-q
-c
-p
-o
-r
-t
-a
-l
-
-
+  # qcportal requires apsw, which needs compiling and hence problems.
+  - qcportal
 
 # Core packages
   - molsystem==2024.5.8
