--- a/.github/workflows/Release.yaml
+++ b/.github/workflows/Release.yaml
@@ -60,7 +60,7 @@ jobs:
         with:
           context: ./environments
           file: ./environments/SEAMM_Dockerfile
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           tags: ${{ steps.meta-seamm.outputs.tags }}
           annotations: ${{ steps.meta-seamm.outputs.annotations }}
