--- a/.github/workflows/Check.yaml
+++ b/.github/workflows/Check.yaml
@@ -1,9 +1,9 @@
 name: Check
 
 on:
-  schedule:
-    - cron: '0 5 * * *'
   workflow_dispatch:
+  # schedule:
+  #   - cron: '0 5 * * *'
 
 jobs:
   check:
