--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
 ]
-requires-python = ">=3.12"
+# requires-python = ">=3.12"
 # Declare any run-time dependencies that should be installed with the package.
 dependencies = [
     "requests",
