--- a/.github/workflows/Check.yaml
+++ b/.github/workflows/Check.yaml
@@ -56,11 +56,24 @@ jobs:
             echo "Working directory clean"
           else
             echo "Changes detected"
+            echo "##############################################################"
+            git status --porcelain
+            echo "##############################################################"
             ls -lR
+            echo "##############################################################"
             echo "seamm.yml file:"
+            echo ""
             cat environments/seamm.yml
+            echo "##############################################################"
+            echo ""
             echo "\nseamm_pinned.yml file:"
+            echo ""
             cat environments/seamm_pinned.yml
+            echo "##############################################################"
+            echo ""
+            echo "Does commit_message.txt exist?"
+            ls -l commit_message.txt
+            echo ""
             git commit -a -F commit_message.txt
             git push
             # Create release
