--- a/.github/workflows/Check.yaml
+++ b/.github/workflows/Check.yaml
@@ -43,7 +43,7 @@ jobs:
         uses: conda-incubator/setup-miniconda@v3
         with:
           installation-dir: ~/
-          environment-file: ../../../test.yml
+          environment-file: ~/test.yml
           activate-environment: seamm
           auto-update-conda: false
           auto-activate-base: false
