Adding correct shell invocation for using conda environment

--- a/.github/workflows/Check.yaml
+++ b/.github/workflows/Check.yaml
@@ -50,6 +50,7 @@ jobs:
           show-channel-urls: true
       
       - name: execute py script
+        shell: bash -l {0}
         run: |
           ls -l ~/
           echo "#############################"
